# PHOENIX

./: .gitignore  README.md  package.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py  models.py  repositories.py  routes.py  services.py
apps/api/app/agents/: planner.py
apps/api/app/causal/: engine.py
apps/api/app/decision/: engine.py
apps/api/app/gitlab/: adapter.py  connector.py  repository_intelligence.py
apps/api/app/memory/: engine.py
apps/api/app/simulation/: engine.py
apps/api/app/twin/: engine.py
apps/api/tests/: test_api.py
apps/web/: README.md  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: before-after-comparison.tsx  black-swan-radar.tsx  enterprise-memory-panel.tsx  enterprise-twin-view.tsx  future-timeline.tsx  live-intelligence-panel.tsx  orbit-insight-panel.tsx  orbit-moment.tsx  phoenix-demo.tsx  risk-collapse.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  panel.tsx
apps/web/src/lib/: api.ts  types.ts
data-cache/: actions.json  scenario_01.json  scenario_02.json  twin.json
demo-data/: scenario.json  scenario_02.json  scenario_03.json  scenario_gitlab.json  simulation.json
docs/: architecture-diagram.md  demo-script.md  demo-video-script.md  devpost-submission.md  judge-cheat-sheet.md  judge-demo-checklist.md  judge-walkthrough.md  mvp-architecture.md  screenshots-guide.md  technical-highlights.md
scripts/: start-demo.ps1
